# ZKCTF-lokis-trapdoor

./: Cargo.toml  README.md  srs_8
examples/: client.rs  local.rs
lambdaworks_plonk_prover/: Cargo.toml
lambdaworks_plonk_prover/src/: setup.rs
src/: circuit.rs  lib.rs  server.rs
