[package]
name = "lokidoor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "d8f14cb"}
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks", rev = "d8f14cb"}
lambdaworks-plonk = { path = "./lambdaworks_plonk_prover"}